--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,4 @@ cmake_minimum_required(VERSION 3.20.5)
 
 project(MathEvaluator)
 
-add_executable(test test/test.cpp include/parser.cpp)
+add_executable(test test/test.cpp include/evaluator.cpp)
