--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,35 @@
-# Ignore clangd's compile_commands.json
-compile_commands.json
-build/CMakeFiles
+# Build system
+build/
+
+Prerequisites
+*.d
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.appd
